Update Pedestrian detection openCV.ipynb

--- a/Pedestrian detection openCV.ipynb
+++ b/Pedestrian detection openCV.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "body_classifier = cv2.CascadeClassifier('C://Users//Bhavy//anaconda3//envs//tf-gpu-cuda8//Library//etc//haarcascades//haarcascade_fullbody.xml')"
+    "body_classifier = cv2.CascadeClassifier('haarcascades//haarcascade_fullbody.xml')"
    ]
   },
   {
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cap = cv2.VideoCapture('D://Downloads//Stupid Pedestrians Compilation - July 2018.mp4')"
+    "cap = cv2.VideoCapture('Stupid Pedestrians Compilation - July 2018.mp4')"
    ]
   },
   {
